--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Git :):) I am center</h1>
-    <p>blablabla paragraph</p>
+    <p>Center conflict blablabla paragraph</p>
     <span>Hello from home</span>
 </body>
 </html>
