--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Git :):) I am center</h1>
     <p>Center conflict blablabla paragraph Home</p>
-    <span>Hello from home</span>
+    <span>tuesday some span Hello from home</span>
 </body>
 </html>
