--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Hello Git</title>
 </head>
 <body>
-    <h1>Git :):) I am center time for lunch</h1>
+    <h1>bad conflict Git :):) I am center time for lunch</h1>
     <p>Center conflict blablabla paragraph Home</p>
     <span>tuesday some span Hello from home</span>
 </body>
