--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>home confl bad conflict Git :):) I am center time for lunch</h1>
+    <h1>new change home confl bad conflict Git :):) I am center time for lunch</h1>
     <p>Center conflict blablabla paragraph Home</p>
     <span>tuesday some span Hello from home</span>
 </body>
