--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <h1>new change home confl bad conflict Git :):) I am center time for lunch</h1>
-    <p>Center conflict blablabla paragraph Home</p>
+    <h1>ala bala new change home confl bad conflict Git :):) I am center time for lunch</h1>
+    <p>ala bala Center conflict blablabla paragraph Home</p>
     <span>tuesday some span Hello from home</span>
 </body>
 
