--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <h1>ala bala new change home confl bad conflict Git :):) I am center time for lunch</h1>
     <p>ala bala Center conflict blablabla paragraph Home</p>
+
+    <div>some div</div>
     <span>tuesday some span Hello from home</span>
 </body>
 
