long comment very long long

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>ala bala new change home confl bad conflict Git :):) I am center time for lunch</h1>
+    <h1>:) ala bala new change home confl bad conflict Git :):) I am center time for lunch</h1>
     <p>ala bala Center conflict blablabla paragraph Home</p>
 
     <div>some div</div>
